--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@tanstack/react-query": "^5.76.1",
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "es-toolkit": "^1.38.0",
     "jotai": "^2.12.4",
@@ -22,7 +23,6 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "tailwind-merge": "^3.3.0",
-    "xlsx": "^0.18.5",
     "zod": "^3.24.4"
   },
   "devDependencies": {
