--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "es-toolkit": "^1.38.0",
     "jotai": "^2.12.4",
     "next": "15.3.2",
+    "overlay-kit": "^1.8.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
